# python-course-cookiecutter-v2

./: .gitignore  .pre-commit-config.yaml  FORM.md  Makefile  README.md  TESTING.md  cookiecutter.json  pyproject.toml  run.sh
.github/: build-test.yaml
.github/workflows/: build-test-publish.yaml  build-test.yaml  create-or-update-repo.yaml
src/example_pkg/: __init__.py  cities.json  states_info.py
tests/: __init__.py  conftest.py  consts.py  test__generate_project.py  test__makefile.py
tests/fixtures/: __init__.py  example_fixture.py  project_dir.py
tests/functional_tests/: __init__.py  test__generate_project.py  test__makefile.py
tests/unit_tests/: __init__.py  test_states_info.py
tests/utils/: __init__.py  project.py
{{cookiecutter.repo_name}}/: .gitignore  Makefile  README.md  pyproject.toml  run.sh
{{cookiecutter.repo_name}}/.github/workflows/: build-test-publish.yaml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_import_name}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: __init__.py  conftest.py  consts.py  test_states_info.py
{{cookiecutter.repo_name}}/tests/fixtures/: example_fixture.py
{{cookiecutter.repo_name}}/tests/unit_tests/: __init__.py  test_states_info.py
